--- a/src/classes/GauLookupControllerTest.cls
+++ b/src/classes/GauLookupControllerTest.cls
@@ -1,10 +1,10 @@
 @IsTest
-public with sharing class LookupControllerTest {
+public with sharing class GauLookupControllerTest {
   @IsTest
   public static void happyPath() {
     insert new npsp__General_Accounting_Unit__c(Name = 'Unit 1');
     Test.startTest();
-    List<LookupSearchResult> lookupSearchResults = LookupController.gauSearch(
+    List<LookupSearchResult> lookupSearchResults = GauLookupController.search(
       'Unit 1',
       new List<Id>()
     );
@@ -19,7 +19,7 @@ public with sharing class LookupControllerTest {
   @IsTest
   public static void testMaxResults() {
     List<npsp__General_Accounting_Unit__c> gaus = new List<npsp__General_Accounting_Unit__c>();
-    Integer tooMany = LookupController.MAX_RESULTS + 1;
+    Integer tooMany = GauLookupController.MAX_RESULTS + 1;
     for (Integer itr = 0; itr < tooMany; itr++) {
       gaus.add(
         new npsp__General_Accounting_Unit__c(
@@ -29,13 +29,13 @@ public with sharing class LookupControllerTest {
     }
     insert gaus;
     Test.startTest();
-    List<LookupSearchResult> lookupSearchResults = LookupController.gauSearch(
+    List<LookupSearchResult> lookupSearchResults = GauLookupController.search(
       'Unit',
       new List<Id>()
     );
     Test.stopTest();
     System.assertEquals(
-      LookupController.MAX_RESULTS,
+      GauLookupController.MAX_RESULTS,
       lookupSearchResults.size(),
       'Wrong number of search results'
     );
