apex save method

--- a/force-app/main/default/classes/GauExpendituresManager.cls
+++ b/force-app/main/default/classes/GauExpendituresManager.cls
@@ -1,5 +1,5 @@
 public with sharing class GauExpendituresManager {
-  @AuraEnabled(cacheable=true)
+  @AuraEnabled
   public static DisbursementWrapper getDisbursement(String disbursementId) {
     List<outfunds__Disbursement__c> disbursements = [
       SELECT
@@ -30,6 +30,56 @@ public with sharing class GauExpendituresManager {
     return new DisbursementWrapper(disbursement);
   }
 
+  @AuraEnabled
+  public static void upsertGauExpenditures(
+    String expendituresString,
+    String disbursementId
+  ) {
+    List<GauExpenditureWrapper> expenditureWrappers = (List<GauExpenditureWrapper>) JSON.deserialize(
+      expendituresString,
+      List<GauExpenditureWrapper>.class
+    );
+    List<GAU_Expenditure__c> expenditures = new List<GAU_Expenditure__c>();
+    for (GauExpenditureWrapper expenditureWrapper : expenditureWrappers) {
+      expenditures.add(
+        new GAU_Expenditure__c(
+          Id = expenditureWrapper.recordId,
+          Disbursement__c = disbursementId,
+          General_Accounting_Unit__c = expenditureWrapper.gauId,
+          Amount__c = expenditureWrapper.amount
+        )
+      );
+    }
+    List<Gau_Expenditure__c> expendituresToDelete = queryDeletedExpenditures(
+      expenditures,
+      disbursementId
+    );
+    delete expendituresToDelete;
+    upsert expenditures;
+  }
+
+  private static List<GAU_Expenditure__c> queryDeletedExpenditures(
+    List<GAU_Expenditure__c> remainingExpenditures,
+    String disbursementId
+  ) {
+    List<Id> remainingExpenditureIds = new List<Id>();
+    for (GAU_Expenditure__c expenditure : remainingExpenditures) {
+      remainingExpenditureIds.add(expenditure.Id);
+    }
+    List<GAU_Expenditure__c> allExpenditures = [
+      SELECT Id
+      FROM GAU_Expenditure__c
+      WHERE Disbursement__c = :disbursementId
+    ];
+    List<GAU_Expenditure__c> expendituresToDelete = new List<GAU_Expenditure__c>();
+    for (GAU_Expenditure__c expenditure : allExpenditures) {
+      if (!remainingExpenditureIds.contains(expenditure.Id)) {
+        expendituresToDelete.add(expenditure);
+      }
+    }
+    return expendituresToDelete;
+  }
+
   public class DisbursementWrapper {
     @AuraEnabled
     public Id recordId;
@@ -44,10 +94,13 @@ public with sharing class GauExpendituresManager {
       this.name = disbursement.Name;
       this.amount = disbursement.outfunds__Amount__c;
       this.expenditures = new List<GauExpenditureWrapper>();
+      Integer rowId = 1;
       for (
         GAU_Expenditure__c gauExpenditure : disbursement.GAU_Expendatures__r
       ) {
-        this.expenditures.add(new GauExpenditureWrapper(gauExpenditure));
+        this.expenditures.add(
+          new GauExpenditureWrapper(gauExpenditure, rowId++)
+        );
       }
     }
   }
@@ -63,13 +116,17 @@ public with sharing class GauExpendituresManager {
     public Decimal amount;
     @AuraEnabled
     public Integer rowId;
-    public GauExpenditureWrapper(GAU_Expenditure__c gauExpenditure) {
+    public GauExpenditureWrapper(
+      GAU_Expenditure__c gauExpenditure,
+      Integer rowId
+    ) {
       this.recordId = gauExpenditure.Id;
       this.gauId = gauExpenditure.General_Accounting_Unit__c;
       if (this.gauId != null) {
         this.gauName = gauExpenditure.General_Accounting_Unit__r.Name;
       }
       this.amount = gauExpenditure.Amount__c;
+      this.rowId = rowId;
     }
   }
 }
