--- a/force-app/main/default/classes/GauLookupControllerTest.cls
+++ b/force-app/main/default/classes/GauLookupControllerTest.cls
@@ -59,4 +59,47 @@ public with sharing class GauLookupControllerTest {
       'Wrong number of search results'
     );
   }
+
+  @IsTest
+  public static void testGetters() {
+    npsp__General_Accounting_Unit__c gau = new npsp__General_Accounting_Unit__c(
+      Name = 'Unit 1',
+      npsp__Description__c =
+        'In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.'
+    );
+    insert gau;
+    Test.startTest();
+    List<LookupSearchResult> lookupSearchResults = GauLookupController.search(
+      'Unit 1',
+      new List<Id>()
+    );
+    Test.stopTest();
+    System.assertEquals(
+      1,
+      lookupSearchResults.size(),
+      'Wrong number of search results'
+    );
+    LookupSearchResult result = lookupSearchResults[0];
+    System.assertEquals(
+      gau.Id,
+      result.getId(),
+      'getId() failed to load correct id.'
+    );
+    System.assertEquals(
+      'npsp__General_Accounting_Unit__c',
+      result.getSObjectType(),
+      'Wrong SObject type provided'
+    );
+    System.assertEquals(
+      GauLookupController.ICON_NAME,
+      result.getIcon(),
+      'Wrong icon provided'
+    );
+    System.assertEquals(gau.Name, result.getTitle(), 'Wrong title provided');
+    System.assertEquals(
+      gau.npsp__Description__c,
+      result.getSubtitle(),
+      'Wrong subtitle provided'
+    );
+  }
 }
